--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -6,3 +6,5 @@
 @import "abstracts/utilities.scss";
 @import "abstracts/variables.scss";
 @import "abstracts/mixins.scss";
+
+@import "layout/navbar.scss";
