--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -5,3 +5,7 @@ $color-black: #000;
 $color-corp-dark: #ed8074;
 $color-corp-med: #f5b3ad;
 $color-corp-light: #fbd9d6;
+
+$color-aurora-dark: #47b8bd;
+$color-aurora-med: #79cbcf;
+$color-aurora-light: #c1e8e9;
