--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -46,7 +46,7 @@ body {
     max-width: 60%;
     height: auto;
     margin-bottom: 2rem; }
-  @media only screen and (max-width: 37.5em) {
+  @media only screen and (min-width: 37.5em) {
     .login-form {
       width: 100%;
       height: 100vh;
@@ -80,27 +80,29 @@ body {
   margin-bottom: 3rem; }
 
 .navbar__main-links {
-  color: #fff;
+  color: #000;
   display: block;
   text-decoration: none;
   font-size: 1.1rem;
   margin-right: 2rem; }
-  @media only screen and (max-width: 37.5em) {
+  @media only screen and (min-width: 37.5em) {
     .navbar__main-links {
-      color: #000; } }
+      color: #fff; } }
 
 .navbar__logo {
   width: auto;
   max-height: 3rem;
-  margin-right: 1rem; }
-  @media only screen and (max-width: 37.5em) {
+  margin-right: 1rem;
+  display: none; }
+  @media only screen and (min-width: 56.25em) {
     .navbar__logo {
-      display: none; } }
+      display: flex; } }
 
 .navbar__logo-mobile {
   width: auto;
   max-height: 2.5rem;
-  margin-right: 0.5rem; }
-  @media (min-width: 600px) {
+  margin-right: 0.5rem;
+  display: flex; }
+  @media only screen and (min-width: 56.25em) {
     .navbar__logo-mobile {
       display: none; } }
