--- a/src/sass/components/LoginForm.scss
+++ b/src/sass/components/LoginForm.scss
@@ -3,22 +3,14 @@
 
 .login-form {
     background-color: rgba($color-white, .85);
-    border-radius: 8px;
-    width: 320px;
-    margin-top: 10rem;
+
+    border-radius: 0;
+    width: 100%;
+    height: 100vh;
+    margin-top: 0;
     text-align: center;
     padding-top: 5rem;
     padding-bottom: 5rem;
-
-
-    &__input {
-        width: 80%;
-        //font-size: inherit;
-
-        &:not(:last-child) {
-            margin-bottom: 2rem;
-        }
-    }
 
     &_logo {
         max-width: 60%;
@@ -26,19 +18,19 @@
         margin-bottom: 2rem;
     }
 
+    &__submit-button {
+        width: 50%;
+        min-height: 4rem;
+    }
 
-    @include respond(phone) {
-        width: 100%;
-        height: 100vh;
-        margin-top: 0;
-        border-radius: 0;
+    @include respond(tablet) {
+        width: 320px;
+        height: auto;
+        margin-top: 10rem;
+        border-radius: 8px;
 
-        &__input {
-            width: 90%;
-
-            &:not(:last-child) {
-                margin-bottom: 2rem;
-            }
+        &__submit-button {
+            width: 80%;
         }
     }
 }
