--- a/src/sass/layout/_navbar.scss
+++ b/src/sass/layout/_navbar.scss
@@ -1,36 +1,36 @@
 @import "../abstracts/variables.scss";
 
-.navbar{
-    &__main-links{
+.navbar {
+    &__main-links {
         color: $color-black;
         display: block;
         text-decoration: none;
         font-size: 1.1rem;
         margin-right: 2rem;
 
-        @include respond(tablet) {
+        @include respond(desktop) {
             color: $color-white;
         }
     }
 
-    &__logo{
+    &__logo {
         width: auto;
         max-height: 3rem;
         margin-right: 1rem;
         display: none;
 
-        @include respond(tablet) {
+        @include respond(dsesktop) {
             display: flex;
         }
     }
 
-    &__logo-mobile{
+    &__logo-mobile {
         width: auto;
         max-height: 2.5rem;
         margin-right: 0.5rem;
         display: flex;
 
-        @include respond(tablet) {
+        @include respond(desktop) {
             display: none;
         }
     }
