--- a/src/sass/layout/_navbar.scss
+++ b/src/sass/layout/_navbar.scss
@@ -19,7 +19,7 @@
         margin-right: 1rem;
         display: none;
 
-        @include respond(dsesktop) {
+        @include respond(desktop) {
             display: flex;
         }
     }
